# latam-challange

./: .flake8  .gitignore  Dockerfile  Makefile  pyproject.toml
.github/workflows/: cd.yml  ci.yml
challenge/: api.py  exploration.ipynb  model.py
docs/: challenge.md
scripts/: deploy.sh
src/latam/: test_script.py
tests/api/: test_api.py
tests/model/: test_model.py
