[tool.poetry]
name = "latam-challange"
version = "0.1.0"
description = ""
authors = ["santiago suarez <santiago@tryolabs.com>"]
readme = "README.md"
packages = [
    { include = "latam",  from = "src"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "~=0.86.0"
pydantic = "~=1.10.2"
uvicorn = "~=0.15.0"
numpy = "~=1.22.4"
pandas = "~=1.3.5"
scikit-learn = "~=1.3.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "~=3.7.2"
seaborn = "~=0.12.2"
black = "23.3.0"
isort = "5.12.0"
flake8 = "6.0.0"
ipykernel = "^6.29.5"
xgboost = "^2.1.0"

[tool.poetry.group.test.dependencies]
locust = "~=1.6"
coverage = "~=5.5"
pytest = "~=6.2.5"
pytest-cov = "~=2.12.1"
mockito = "~=1.2.2"

[tool.black]
line-length = 88
preview = true

[tool.isort]
atomic = true
profile = "black"
skip = [".venv"]